# wcet-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  err.txt  out.txt
src/: instruction_counter.rs  main.rs
