[package]
name = "wcet-rs"
version = "0.1.0"
authors = ["Hudson Ayers <hayers@stanford.edu>"]
edition = "2018"

[dependencies]
llvm-ir = "0.8.1" # Needs to be same version as what haybale uses
glob = "0.3.0"
simple_logger = "1.6.0"
log = "0.4.11"
rustc-demangle = "0.1.16"
structopt = "0.3"
clap = { version = "2.33", default-features = false }

[dependencies.haybale]
#git = "https://github.com/hudson-ayers/haybale"
#branch = "trait_obj_support"
path = "/home/hudson/code_repos/haybale" # comment in when testing local haybale development
features = ["llvm-13"] # Need to match LLVM version used by rust version under test
